@@ -26,6 +26,13 @@ pub use capi::pa_port_available_t as PortAvailable;
 
 pub type FreeCb = extern "C" fn(p: *mut c_void);
 
+pub type RetvalActual = i32;
+
+/// A wrapper around integer 'quit return values' returned by PulseAudio.
+#[repr(C)]
+#[derive(Debug, Copy, Clone, PartialEq, Eq)]
+pub struct Retval(pub RetvalActual);
+
 /// Playback and record buffer metrics
 #[repr(C)]
 #[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
